--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "no-console": "off",
         "jsx-a11y/label-has-associated-control": "off",
         "max-len": "off",
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-unused-vars":"off"
     }
 }
